syntax = "proto3";

package syllabus.common;

import "google/protobuf/timestamp.proto";
import "syllabus/common/contents.proto";

option go_package = "github.com/manabie-com/backend/pkg/manabuf/syllabus/common;scpb";

message QuestionGroup {
  string question_group_id = 1;
  string learning_material_id = 2;
  string name = 3;
  string description = 4 [deprecated = true];
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  int32 total_children = 7;
  int32 total_points = 8;
  RichText rich_description = 9;
}